--- a/craftcms/templates/default/db.php.erb
+++ b/craftcms/templates/default/db.php.erb
@@ -13,6 +13,8 @@ return array(
         // The database server name or IP address. Usually this is 'localhost' or '127.0.0.1'.
         'server' => '<%= :host %>',
 
+        timwashere
+
         // The name of the database to select.
         'database' => '<%= :database %>',
 
