trying stuff in the template

--- a/craftcms/templates/default/db.php.erb
+++ b/craftcms/templates/default/db.php.erb
@@ -17,10 +17,10 @@ return array(
         'database' => '<%= :database %>',
 
         // The database username to connect with.
-        'user' => 'root',
+        'user' => '<%= :db_user %>',
 
         // The database password to connect with.
-        'password' => '',
+        'password' => '<%= :db_password %>',
 
         // The prefix to use when naming tables. This can be no more than 5 characters.
         'tablePrefix' => 'craft',
