--- a/craftcms/templates/default/db.php.erb
+++ b/craftcms/templates/default/db.php.erb
@@ -14,7 +14,7 @@ return array(
         'server' => '<%= @host %>',
 
         // The name of the database to select.
-        'database' => '<%= @db %>',
+        'database' => '<%= @database_name %>',
 
         // The database username to connect with.
         'user' => '<%= @user %>',
