--- a/craftcms/templates/default/general.php.erb
+++ b/craftcms/templates/default/general.php.erb
@@ -10,7 +10,7 @@
 return array(
 
     // Base site URL
-    'siteUrl' => 'https://<%= @site_url %>',
+    'siteUrl' => null,
 
     // Environment-specific variables (see https://craftcms.com/docs/multi-environment-configs#environment-specific-variables)
     'environmentVariables' => array(),
