--- a/craftcms/templates/default/general.php.erb
+++ b/craftcms/templates/default/general.php.erb
@@ -30,4 +30,7 @@ return array(
     // Dev Mode (see https://craftcms.com/support/dev-mode)
     'devMode' => false,
 
+    // 33MB upload size
+    'maxUploadFileSize' => 33554432
+
 );
