--- a/craftcms/templates/default/virtual-host.conf.erb
+++ b/craftcms/templates/default/virtual-host.conf.erb
@@ -11,7 +11,7 @@
 
     <Directory <%= @home_path %>/www/craftcms/public>
         Options Indexes FollowSymLinks
-        AllowOverride None
+        AllowOverride All
         Require all granted
     </Directory>  
 </VirtualHost>
