--- a/craftcms/templates/default/virtual-host-ssl.conf.erb
+++ b/craftcms/templates/default/virtual-host-ssl.conf.erb
@@ -24,6 +24,7 @@
     SSLCertificateFile <%= @home_path %>/www/craftcms/ssl/certificate.crt
     SSLCertificateKeyFile <%= @home_path %>/www/craftcms/ssl/certificate.key
     SSLCertificateChainFile <%= @home_path %>/www/craftcms/ssl/intermediate.crt
+    SSLPassPhraseDialog exec:<%= @home_path %>/www/craftcms/ssl/passphrase.sh
     LogLevel warn
     ErrorLog <%= @home_path %>/www/logs/error.log
     CustomLog <%= @home_path %>/www/logs/access.log combined
